[gd_scene load_steps=17 format=2]

[ext_resource path="res://UI/Options.gd" type="Script" id=1]
[ext_resource path="res://UI/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/GameTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/ButtonTheme.tres" type="Theme" id=5]
[ext_resource path="res://UI/poco/Poco.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 6 )

[node name="Options" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
margin_left = 435.958
margin_top = 866.87
margin_right = 1495.96
margin_bottom = 914.87
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 0.682353, 0.839216, 0.65098, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="VBoxContainer2" parent="." instance=ExtResource( 3 )]

[node name="OptionsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -538.0
margin_top = -200.0
margin_right = 538.0
margin_bottom = 200.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer"]
margin_top = 176.0
margin_right = 1106.0
margin_bottom = 224.0
custom_constants/separation = 315

[node name="Label" type="Label" parent="OptionsContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Actions"

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/HBoxContainer/Label"]
margin_left = 1.41425
margin_top = 52.3504
margin_right = 229.414
margin_bottom = 331.35
custom_constants/separation = -7

[node name="Label2" type="Label" parent="OptionsContainer/HBoxContainer/Label/VBoxContainer"]
margin_right = 227.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 1 )
text = "Right "

[node name="Label3" type="Label" parent="OptionsContainer/HBoxContainer/Label/VBoxContainer"]
margin_top = 29.0
margin_right = 227.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 2 )
text = "Left"

[node name="Label4" type="Label" parent="OptionsContainer/HBoxContainer/Label/VBoxContainer"]
margin_top = 58.0
margin_right = 227.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 3 )
text = "Jump"

[node name="Label5" type="Label" parent="OptionsContainer/HBoxContainer/Label/VBoxContainer"]
margin_top = 87.0
margin_right = 227.0
margin_bottom = 123.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 4 )
text = "Crouch"

[node name="Label6" type="Label" parent="OptionsContainer/HBoxContainer/Label/VBoxContainer"]
margin_top = 116.0
margin_right = 227.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 5 )
text = "Heavy Attack"

[node name="Label7" type="Label" parent="OptionsContainer/HBoxContainer/Label/VBoxContainer"]
margin_top = 145.0
margin_right = 227.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 6 )
text = "Light Attack"

[node name="Label8" type="Label" parent="OptionsContainer/HBoxContainer/Label/VBoxContainer"]
margin_top = 174.0
margin_right = 227.0
margin_bottom = 210.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 7 )
text = "Ultra Attack"

[node name="Label9" type="Label" parent="OptionsContainer/HBoxContainer/Label/VBoxContainer"]
margin_top = 203.0
margin_right = 227.0
margin_bottom = 239.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 8 )
text = "Pause"

[node name="Label2" type="Label" parent="OptionsContainer/HBoxContainer"]
margin_left = 435.0
margin_right = 567.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Buttons"

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/HBoxContainer/Label2"]
margin_top = 52.35
margin_right = 177.0
margin_bottom = 368.35
custom_constants/separation = -7

[node name="Label" type="Label" parent="OptionsContainer/HBoxContainer/Label2/VBoxContainer"]
margin_right = 177.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "Right Arrow/D"

[node name="Label2" type="Label" parent="OptionsContainer/HBoxContainer/Label2/VBoxContainer"]
margin_top = 29.0
margin_right = 177.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "Left Arrow/A"

[node name="Label3" type="Label" parent="OptionsContainer/HBoxContainer/Label2/VBoxContainer"]
margin_top = 58.0
margin_right = 177.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "Up Arrow/W"

[node name="Label4" type="Label" parent="OptionsContainer/HBoxContainer/Label2/VBoxContainer"]
margin_top = 87.0
margin_right = 177.0
margin_bottom = 123.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "C"

[node name="Label5" type="Label" parent="OptionsContainer/HBoxContainer/Label2/VBoxContainer"]
margin_top = 116.0
margin_right = 177.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "Right Click"

[node name="Label6" type="Label" parent="OptionsContainer/HBoxContainer/Label2/VBoxContainer"]
margin_top = 145.0
margin_right = 177.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "Left Click"

[node name="Label7" type="Label" parent="OptionsContainer/HBoxContainer/Label2/VBoxContainer"]
margin_top = 174.0
margin_right = 177.0
margin_bottom = 210.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "Space"

[node name="Label8" type="Label" parent="OptionsContainer/HBoxContainer/Label2/VBoxContainer"]
margin_top = 203.0
margin_right = 177.0
margin_bottom = 239.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 9 )
text = "Escape"

[node name="Label3" type="Label" parent="OptionsContainer/HBoxContainer"]
margin_left = 882.0
margin_right = 1106.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Music/Sounds"

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/HBoxContainer/Label3"]
margin_top = 52.35
margin_right = 40.0
margin_bottom = 92.35

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer/HBoxContainer/Label3/VBoxContainer"]
margin_right = 220.0
margin_bottom = 36.0
custom_constants/separation = 54

[node name="Label" type="Label" parent="OptionsContainer/HBoxContainer/Label3/VBoxContainer/HBoxContainer"]
margin_right = 66.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 10 )
text = "Music"

[node name="HSlider" type="HSlider" parent="OptionsContainer/HBoxContainer/Label3/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
max_value = 8.0
value = 4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsContainer/HBoxContainer/Label3/VBoxContainer"]
margin_top = 40.0
margin_right = 220.0
margin_bottom = 76.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="OptionsContainer/HBoxContainer/Label3/VBoxContainer/HBoxContainer2"]
margin_right = 90.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_fonts/font = SubResource( 10 )
text = "Sounds"
__meta__ = {
"_editor_description_": ""
}

[node name="HSlider2" type="HSlider" parent="OptionsContainer/HBoxContainer/Label3/VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
max_value = 8.0
value = 4.0

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]
offset = Vector2( 0, 125 )
transform = Transform2D( 1, 0, 0, 1, 0, 125 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="OptionsContainer/HBoxContainer/Label3/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="OptionsContainer/HBoxContainer/Label3/VBoxContainer/HBoxContainer2/HSlider2" to="." method="_on_HSlider2_value_changed"]
